# Halal-app-web

./: .gitignore  README.md
backend/: .env.example  .fastapicloudignore  .gitignore  Dockerfile  README.md  alembic.ini  database.sql  pyproject.toml
backend/app/: __init__.py  analysis.py  auth.py  bootstrap.py  config.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py  services.py
backend/data/: product-import.schema.json  products-template.csv  sample-products.json
backend/migrations/: env.py
backend/migrations/versions/: 20260706_email_otp_profile.py  5aa2495de664_initial_tables.py
backend/scripts/: import_products.py  seed_database.py
backend/tests/: test_app.py
frontend/: .env.local.example  README.md  capacitor.config.ts  eslint.config.mjs  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/halalfit/global/: MainActivity.java
frontend/android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/favorites/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/history/: page.tsx
frontend/app/ingredients/: page.tsx
frontend/app/login/: page.tsx
frontend/app/product/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/result/: page.tsx
frontend/app/scan/: page.tsx
frontend/app/search/: page.tsx
frontend/app/verify-otp/: page.tsx
frontend/components/: CodeScanner.tsx  Footer.tsx  ImageScanner.tsx  IngredientTable.tsx  Loading.tsx  Navbar.tsx  ProductCard.tsx  ScanResult.tsx  SearchBox.tsx
frontend/lib/: api.ts  auth.ts  scan-cache.ts  storage.ts  types.ts
