[project]
name = "halalfit-backend"
version = "1.0.0"
description = "FastAPI backend for HalalFit Global"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21.0",
  "alembic>=1.15.0",
  "asyncpg>=0.30.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "greenlet>=3.2.0",
  "httpx>=0.28.0",
  "pillow>=11.0.0",
  "psycopg[binary]>=3.2.0",
  "pwdlib[argon2]>=0.2.0",
  "pydantic-settings>=2.10.0",
  "PyJWT[crypto]>=2.10.0",
  "pytesseract>=0.3.13",
  "python-multipart>=0.0.20",
  "sqlalchemy[asyncio]>=2.0.41",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.0"
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*", "scripts*"]
