[project]
name = "halalfit-backend"
version = "1.1.2"
description = "FastAPI backend for HalalFit Global"
requires-python = "==3.13.*"
dependencies = [
  "aiosqlite>=0.22.0,<0.23",
  "alembic==1.18.4",
  "email-validator>=2.3.0,<3",
  "fastapi[standard]>=0.139.0,<0.140",
  "httpx>=0.28.1,<0.29",
  "pillow>=12.0.0,<13",
  "asyncpg>=0.31.0,<0.32",
  "pwdlib[argon2]>=0.3.0,<0.4",
  "pydantic-settings>=2.14.0,<3",
  "PyJWT[crypto]>=2.13.0,<3",
  "pytesseract>=0.3.13,<0.4",
  "python-multipart>=0.0.20,<0.1",
  "sqlalchemy[asyncio]>=2.0.51,<2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9",
  "pytest-asyncio>=1.0.0,<2",
  "ruff>=0.15.0,<0.16",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["migrations/versions", ".venv", ".ruff_cache", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*", "scripts*"]
